--- a/frontend_react_js/package.json
+++ b/frontend_react_js/package.json
@@ -1,34 +1,15 @@
 {
-  "name": "react-kavia",
-  "version": "0.1.0",
+  "name": "frontend-react-js",
+  "version": "1.0.0",
   "private": true,
+  "description": "Minimal React frontend for music streamer",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build"
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "cross-env": "^7.0.3"
+    "react-scripts": "5.0.1"
   }
 }
